--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dockerode": "^2.3.0",
     "firebase": "^2.4.1",
     "lodash": "^4.15.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "wtfnode": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
