--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -25,6 +25,10 @@ RUN npm set progress=false && \
     npm cache clean && \
     rm -rf /tmp/*
 
+ENV STREAMER_HOST logs-streamer.dev.codefresh.io
+ENV STREAMER_PORT 80
+ENV STREAMER_PATH ""
+
 # Set tini as entrypoint
 COPY . .
 
