--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "cf-errors": "^0.1.11",
     "cf-logs": "git+https://github.com/codefresh-io/cf-logs.git#ceba4f309e52a077747a0c6bf9c3ad02e762dc4b",
-    "dockerode": "^2.3.0",
     "docker-events": "0.0.2",
+    "dockerode": "^2.3.0",
     "firebase": "^2.4.1",
     "forever": "^0.15.3",
     "lodash": "^4.15.0",
-    "q": "^1.4.1"
+    "mongoose": "^4.11.1",
+    "q": "^1.4.1",
+    "require-dir": "^0.3.2"
   },
   "devDependencies": {
     "chai": "^3.0.0",
