--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "cf-container-logger",
   "version": "0.0.4",
-  "description": "codefresh container logger to firebase",
+  "description": "codefresh container logger",
   "keywords": [
     "cf-container-logger"
   ],
   "dependencies": {
+    "@codefresh-io/cf-common": "^0.0.8",
     "cf-errors": "^0.1.11",
     "cf-logs": "git+https://github.com/codefresh-io/cf-logs.git#ceba4f309e52a077747a0c6bf9c3ad02e762dc4b",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.0",
-    "firebase": "git+https://github.com/codefresh-io/firebase.git#80b2ed883ff281cd67b53bd0f6a0bbd6f330fed5",
     "forever": "^0.15.3",
     "lodash": "^4.15.0",
     "q": "^1.4.1"
