--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/cf-common": "^0.0.8",
+    "@codefresh-io/cf-common": "git+https://github.com/codefresh-io/cf-common.git#48b710c06e31e75dffd3106a28a955fc9f8bd217",
     "cf-errors": "^0.1.11",
     "cf-logs": "git+https://github.com/codefresh-io/cf-logs.git#ceba4f309e52a077747a0c6bf9c3ad02e762dc4b",
     "docker-events": "0.0.2",
