--- a/codefresh.yml
+++ b/codefresh.yml
@@ -5,24 +5,23 @@ steps:
 
   install_dependencies:
     title: 'Installing testing dependencies'
-    image: codefresh/node-tester-image:9.6.1
+    image: node:11.10.0
     commands:
         - yarn install --frozen-lockfile
 
-
   eslint:
     title: 'Running linting logic'
-    image: codefresh/node-tester-image:9.6.1
+    image: node:11.10.0
     commands:
         - yarn lint
         - yarn no-onlys
 
-#  unit_test_step:
-#    image: codefresh/node-tester-image:9.6.1
-#    environment:
-#        - COVERALLS_TOKEN=${{COVERALLS_TOKEN}}
-#    commands:
-#        - yarn test:ci
+  unit_test_step:
+    image: node:11.10.0
+    environment:
+        - COVERALLS_TOKEN=${{COVERALLS_TOKEN}}
+    commands:
+        - yarn test:ci
 
   build_step:
     title: "Building production image"
