--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cf-container-logger",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "codefresh container logger",
   "keywords": [
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#c65a5463ecfd20aa52bf6698ddfe71f570558380",
+    "@codefresh-io/task-logger": "^0.0.12",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
