--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/task-logger": "^0.0.17",
+    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#7455e3fd0b555b7fdfb1b27c83aed1bd2410e6b5",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
