--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#5867f286aaff21249f32c9b3b8ff682099a719a9",
+    "@codefresh-io/task-logger": "^0.0.18",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
