Add codefresh label to Dockerfile

--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -77,4 +77,6 @@ RUN yarn install --frozen-lockfile --production
 
 COPY . ./
 
+LABEL owner="codefresh.io"
+
 CMD ["powershell",  "./lib/forever.ps1"]
