--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/task-logger": "^0.0.18",
+    "@codefresh-io/task-logger": "git://github.com/codefresh-io/task-logger.git#SAAS-firebase-writable-stream",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
