--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.0",
+    "express": "^4.17.1",
     "forever": "^0.15.3",
     "lodash": "^4.15.0",
     "q": "^1.4.1"
