--- a/.eslintignore
+++ b/.eslintignore
@@ -13,3 +13,8 @@ reports
 
 # Until we move all tests to their own subdirectory, we ignore them in eslint
 *.spec.js
+
+node_modules/**
+coverage
+stubs
+gulp.js
