--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
     "express": "^4.17.1",
     "forever": "^0.15.3",
     "lodash": "^4.15.0",
@@ -18,6 +21,12 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-node": "^11.1.0",
     "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
     "gulp-env": "^0.2.0",
@@ -37,7 +46,7 @@
     "node": ">8.8.0"
   },
   "scripts": {
-    "lint": "gulp lint",
+    "lint": "eslint . --ext .js",
     "no-onlys": "gulp no.onlys",
     "test": "mocha './{,!(node_modules)/**/}*.spec.js'",
     "test:integration": "gulp integ_test",
