--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   ],
   "dependencies": {
     "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#d38c0c0c216c8c012dbe462f0d1f3919d5f44bef",
+    "body-parser": "^1.19.0",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.0",
+    "express": "^4.17.1",
     "forever": "^0.15.3",
     "lodash": "^4.15.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
