--- a/.jshintrc
+++ b/.jshintrc
@@ -12,7 +12,7 @@
   "eqnull": true,
   "node": true,
   "indent": 10,
-  "esnext": true,
+  "esversion": 8,
   "globals"   : {
     /* MOCHA */
     "describe"   : false,
