--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dockerode": "^2.3.0",
     "express": "^4.17.1",
     "forever": "^0.15.3",
+    "kubernetes-client": "^9.0.0",
     "lodash": "^4.15.0",
     "q": "^1.4.1",
     "request": "^2.88.2",
