--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "dependencies": {
     "@codefresh-io/task-logger": "1.8.1",
+    "@kubernetes/client-node": "^0.13.0",
     "body-parser": "^1.19.0",
     "cf-errors": "^0.1.11",
     "cf-logs": "^1.1.0",
@@ -14,11 +15,11 @@
     "dockerode": "^2.3.0",
     "express": "^4.17.1",
     "forever": "^0.15.3",
-    "kubernetes-client": "^9.0.0",
     "lodash": "^4.15.0",
     "q": "^1.4.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "stringstream": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
