--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "sinon-chai": "^3.3.0"
   },
   "engines": {
-    "node": ">8.8.0"
+    "node": ">=11.10.0"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
   },
   "scripts": {
     "lint": "gulp lint",
