--- a/package.json
+++ b/package.json
@@ -6,32 +6,30 @@
     "cf-container-logger"
   ],
   "dependencies": {
-    "@codefresh-io/task-logger": "^1.8.11",
+    "@codefresh-io/task-logger": "^1.8.13",
     "body-parser": "^1.19.0",
-    "cf-errors": "^0.1.11",
+    "cf-errors": "^0.1.15",
     "cf-logs": "^1.1.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.0",
     "express": "^4.17.1",
-    "forever": "^0.15.3",
-    "lodash": "^4.15.0",
+    "forever": "^3.0.4",
+    "lodash": "^4.17.0",
     "q": "^1.4.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.6"
+  },
+  "resolutions": {
+    "request": "^2.88.2",
+    "lodash": "4.17.20",
+    "websocket-extensions": "0.1.4",
+    "graceful-fs": "^4.2.4",
+    "ini": "1.3.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "gulp": "^3.9.1",
-    "gulp-coveralls": "^0.1.4",
-    "gulp-env": "^0.2.0",
-    "gulp-istanbul": "^0.10.4",
-    "gulp-jshint": "^1.11.0",
-    "gulp-mocha": "^7.0.0",
-    "gulp-mocha-co": "^0.4.1-co.3",
-    "gulp-rimraf": "^0.1.1",
     "isparta": "^4.0.0",
     "proxyquire": "^1.7.4",
-    "run-sequence": "^1.1.0",
     "shelljs": "^0.6.0",
     "sinon": "^7.2.4",
     "sinon-chai": "^3.3.0"
@@ -39,20 +37,12 @@
   "engines": {
     "node": ">=11.10.0"
   },
-  "resolutions": {
-    "graceful-fs": "^4.2.4"
-  },
   "scripts": {
-    "lint": "gulp lint",
-    "no-onlys": "gulp no.onlys",
+    "lint": "yarn jshint",
+    "lint_node_12" : "yarn jshint && ./no-onlys.sh",
     "test": "node ./node_modules/mocha/bin/_mocha './{,!(node_modules)/**/}*.spec.js' --exit",
-    "test:integration": "gulp integ_test",
     "test:ci": "yarn test",
-    "coveralls": "gulp coveralls",
-    "clean": "gulp clean",
     "start": "node server/index.js",
-    "gulp": "gulp",
-    "eslint": "eslint",
     "version": "exit 0"
   }
 }
