--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "sinon-chai": "^3.3.0"
   },
   "engines": {
-    "node": ">=11.10.0"
+    "node":  "10.24.0"
   },
   "scripts": {
     "lint": "yarn jshint",
