--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "isparta": "^4.0.0",
+    "mocha": "^8.3.0",
     "proxyquire": "^1.7.4",
     "shelljs": "^0.6.0",
     "sinon": "^7.2.4",
