--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "resolutions": {
     "request": "^2.88.2",
-    "lodash": "4.17.20",
+    "lodash": "^4.17.20",
     "websocket-extensions": "0.1.4",
     "graceful-fs": "^4.2.4",
     "ini": "1.3.6"
