--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,40 +1,27 @@
-FROM mcr.microsoft.com/windows/servercore:1809 as download
+ARG OS_RELEASE
+
+FROM mcr.microsoft.com/windows/servercore:${OS_RELEASE} as download
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
-ENV GPG_VERSION 2.3.4
-ENV NODE_VERSION 11.10.0
+ENV GIT_VERSION 2.39.0
+ENV NODE_VERSION 16.18.1
+ENV YARN_VERSION 0.24.6
 
-RUN Invoke-WebRequest $('https://files.gpg4win.org/gpg4win-vanilla-{0}.exe' -f $env:GPG_VERSION) -OutFile 'gpg4win.exe' -UseBasicParsing ; \
-    Start-Process .\gpg4win.exe -ArgumentList '/S' -NoNewWindow -Wait
+# Download and install git
+RUN Invoke-WebRequest $('https://github.com/git-for-windows/git/releases/download/v{0}.windows.1/MinGit-{0}-64-bit.zip' -f $env:GIT_VERSION) -OutFile 'MinGit.zip' -UseBasicParsing ; \
+    Expand-Archive c:\MinGit.zip -DestinationPath c:\MinGit; \
+    $env:PATH = $env:PATH + ';C:\MinGit\cmd\;C:\MinGit\cmd'; \
+    Set-ItemProperty -Path 'HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\Environment\' -Name Path -Value $env:PATH
 
-RUN @( \
-    '94AE36675C464D64BAFA68DD7434390BDBE9B9C5', \
-    'FD3A5288F042B6850C66B31F09FE44734EB7990E', \
-    '71DCFD284A79C3B38668286BC97EC7A07EDE3FC1', \
-    'DD8F2338BAE7501E3DD5AC78C273792F7D83545D', \
-    'C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8', \
-    'B9AE9905FFD7803F25714661B63B535A4C206CA9', \
-    '77984A986EBC2AA786BC0F66B01FBB92821C587A', \
-    '8FCCA13FEF1D0C2E91008E09770F7A9A5AE15600', \
-    '4ED778F539E3634C779C87C6D7062848A1AB005C', \
-    'A48C2BEE680E841632CD4E44F07496B3EB3C1762', \
-    'B9E2F5981AA6E0CD28160D9FF13993A75599653C' \
-    ) | foreach { \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys $_ ; \
-    }
-
-RUN Invoke-WebRequest $('https://nodejs.org/dist/v{0}/SHASUMS256.txt.asc' -f $env:NODE_VERSION) -OutFile 'SHASUMS256.txt.asc' -UseBasicParsing ; \
-    gpg --batch --decrypt --output SHASUMS256.txt SHASUMS256.txt.asc
-
+# Download and install node.js
 RUN Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
-    $sum = $(cat SHASUMS256.txt.asc | sls $('  node-v{0}-win-x64.zip' -f $env:NODE_VERSION)) -Split ' ' ; \
-    if ((Get-FileHash node.zip -Algorithm sha256).Hash -ne $sum[0]) { Write-Error 'SHA256 mismatch' } ; \
+    #    $sum = $(cat SHASUMS256.txt.asc | sls $('  node-v{0}-win-x64.zip' -f $env:NODE_VERSION)) -Split ' ' ; \
+    #    if ((Get-FileHash node.zip -Algorithm sha256).Hash -ne $sum[0]) { Write-Error 'SHA256 mismatch' } ; \
     Expand-Archive node.zip -DestinationPath C:\ ; \
     Rename-Item -Path $('C:\node-v{0}-win-x64' -f $env:NODE_VERSION) -NewName 'C:\nodejs'
 
-ENV YARN_VERSION 0.24.6
-
+# Download and install yarn
 RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12 ; \
     Invoke-WebRequest $('https://yarnpkg.com/downloads/{0}/yarn-{0}.msi' -f $env:YARN_VERSION) -OutFile yarn.msi -UseBasicParsing ; \
     $sig = Get-AuthenticodeSignature yarn.msi ; \
@@ -46,7 +33,7 @@ RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tl
     ) -notcontains $sig.SignerCertificate.Thumbprint) { Write-Error 'Unknown signer certificate' } ; \
     Start-Process msiexec.exe -ArgumentList '/i', 'yarn.msi', '/quiet', '/norestart' -NoNewWindow -Wait
 
-FROM download as build
+FROM download as install
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
@@ -58,15 +45,9 @@ COPY --from=download [ "/Program Files (x86)/yarn", "/yarn" ]
 RUN $env:PATH = 'C:\nodejs;C:\yarn\bin;{0}' -f $env:PATH ; \
     [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine)
 
-CMD [ "node.exe" ]
+FROM install
 
-FROM build
-
-WORKDIR C:/tmp
-
-RUN Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-RUN choco install git -y
-RUN choco install cygwin -y
+WORKDIR C:/cf-container-logger
 
 COPY package.json ./
 
