--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -6,7 +6,7 @@ SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPref
 
 ENV GIT_VERSION 2.39.0
 ENV NODE_VERSION 16.18.1
-ENV YARN_VERSION 0.24.6
+ENV YARN_VERSION 1.22.19
 
 # Download and install git
 RUN Invoke-WebRequest $('https://github.com/git-for-windows/git/releases/download/v{0}.windows.1/MinGit-{0}-64-bit.zip' -f $env:GIT_VERSION) -OutFile 'MinGit.zip' -UseBasicParsing ; \
@@ -23,14 +23,7 @@ RUN Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f 
 
 # Download and install yarn
 RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12 ; \
-    Invoke-WebRequest $('https://yarnpkg.com/downloads/{0}/yarn-{0}.msi' -f $env:YARN_VERSION) -OutFile yarn.msi -UseBasicParsing ; \
-    $sig = Get-AuthenticodeSignature yarn.msi ; \
-    if ($sig.Status -ne 'Valid') { Write-Error 'Authenticode signature is not valid' } ; \
-    Write-Output $sig.SignerCertificate.Thumbprint ; \
-    if (@( \
-    '7E253367F8A102A91D04829E37F3410F14B68A5F', \
-    'AF764E1EA56C762617BDC757C8B0F3780A0CF5F9' \
-    ) -notcontains $sig.SignerCertificate.Thumbprint) { Write-Error 'Unknown signer certificate' } ; \
+    Invoke-WebRequest $('https://github.com/yarnpkg/yarn/releases/download/v{0}/yarn-{0}.msi' -f $env:YARN_VERSION) -OutFile yarn.msi -UseBasicParsing ; \
     Start-Process msiexec.exe -ArgumentList '/i', 'yarn.msi', '/quiet', '/norestart' -NoNewWindow -Wait
 
 FROM download as install
