--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "redis": "^3.1.1"
   },
   "dependencies": {
-    "@codefresh-io/task-logger": "https://github.com/codefresh-io/task-logger.git#256f89f80c8a4f23da1883212332f0cfb8d13c0a",
+    "@codefresh-io/task-logger": "^1.10.0",
     "body-parser": "^1.19.0",
     "cf-errors": "^0.1.16",
     "cf-logs": "^1.1.25",
