--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "resolutions": {
     "minimist": "^0.2.1",
-    "redis": "^3.1.1"
+    "redis": "^3.1.1",
+    "semver": "^7.5.2"
   },
   "dependencies": {
     "@codefresh-io/task-logger": "^1.10.1",
@@ -42,7 +43,7 @@
     "sinon-chai": "^3.7.0"
   },
   "engines": {
-    "node": "16.20"
+    "node": "16.20.2"
   },
   "scripts": {
     "lint": "eslint '*/**/*.js'",
