--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cf-container-logger",
-  "version": "1.8.5",
+  "version": "0.0.0",
   "description": "codefresh container logger",
   "keywords": [
     "cf-container-logger"
@@ -43,7 +43,7 @@
     "sinon-chai": "^3.7.0"
   },
   "engines": {
-    "node": "16.20.2"
+    "node": ">=16.20.2 <=20"
   },
   "scripts": {
     "lint": "eslint '*/**/*.js'",
