test: mongo mtls

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "semver": "^7.5.2"
   },
   "dependencies": {
-    "@codefresh-io/task-logger": "^1.10.1",
+    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#b9fe7a874717f884497eaf628896513c84c6eb5e",
     "body-parser": "^1.19.0",
     "cf-errors": "^0.1.16",
     "cf-logs": "^1.1.25",
