fix: use dev version of `task-logger`

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "semver": "^7.5.2"
   },
   "dependencies": {
-    "@codefresh-io/task-logger": "^1.10.1",
+    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#d77b39c345faf2df510d01b8d1a814f80b875690",
     "body-parser": "^1.19.0",
     "cf-errors": "^0.1.16",
     "cf-logs": "^1.1.25",
