--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "semver": "^7.5.2"
   },
   "dependencies": {
-    "@codefresh-io/task-logger": "git+https://github.com/codefresh-io/task-logger.git#d77b39c345faf2df510d01b8d1a814f80b875690",
+    "@codefresh-io/task-logger": "^1.12.3",
     "body-parser": "^1.19.0",
     "cf-errors": "^0.1.16",
     "cf-logs": "^1.1.25",
