--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@codefresh-io/task-logger": "^1.12.3",
-    "body-parser": "^1.19.0",
     "cf-errors": "^0.1.16",
     "cf-logs": "^1.1.25",
     "docker-events": "0.0.2",
     "dockerode": "^2.5.8",
-    "express": "^4.17.3",
+    "fastify": "^4.28.1",
     "lodash": "^4.17.21",
     "promise-retry": "^2.0.1",
     "q": "^1.5.1",
