--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,20 @@
 {
-  "extends": "airbnb",
-  "ignorePatterns":[
-    "node_modules"
-  ],
+  "extends": "airbnb-base",
+
+  "env": {
+    "node": true,
+    "mocha": true,
+    "es6": true
+  },
+
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2021,
     "sourceType": "script",
     "ecmaFeatures": {
       "impliedStrict": true
     }
   },
-
-  "env": {
-    "node": true,
-    "mocha": true
-  },
-
+  
   "plugins": [
     "chai-friendly",
     "import",
@@ -90,25 +89,5 @@
     "node/no-deprecated-api": "warn",
     "no-useless-constructor": "warn",
     "no-return-await": "off"
-  },
-  "overrides": [
-    {
-      "plugins": ["jest"],
-      "env": {
-        "jest": true
-      },
-      "files": [
-        "**/__tests__/**/*.[jt]s?(x)",
-        "__mocks__/**/*.js",
-        "**/__mocks__/**/*.js"
-      ],
-      "rules": {
-        "jest/no-disabled-tests": "warn",
-        "jest/no-focused-tests": "error",
-        "jest/no-identical-title": "error",
-        "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
-      }
-    }
-  ]
+  }
 }
