fix(secrets): fix an issue with secret server listening on IPv6 (#134)
* fix(secrets): fix an issue with secret server listening on IPv6

* ci: bump version

* feat(secrets): use precise address in `updateMasks()`

* refactor(secrets): replace `request` with `got`

* fix(secrets): store server address on fs

* test(secrets): add tests for helpers

* build: upgrade eslint, clean up dev env

* build: upgrade dependencies

* fix(addNewMask): fail by default

* tests: fix Logger tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,20 @@
 {
-  "extends": "airbnb",
-  "ignorePatterns":[
-    "node_modules"
-  ],
+  "extends": "airbnb-base",
+
+  "env": {
+    "node": true,
+    "mocha": true,
+    "es6": true
+  },
+
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2021,
     "sourceType": "script",
     "ecmaFeatures": {
       "impliedStrict": true
     }
   },
-
-  "env": {
-    "node": true,
-    "mocha": true
-  },
-
+  
   "plugins": [
     "chai-friendly",
     "import",
@@ -78,7 +77,6 @@
     "quote-props": ["error", "consistent"],
 
     "promise/catch-or-return": ["error", { "allowThen": true }],
-    "promise/no-native": "error",
 
     "mocha/no-exclusive-tests": "error",
 
@@ -91,25 +89,5 @@
     "node/no-deprecated-api": "warn",
     "no-useless-constructor": "warn",
     "no-return-await": "off"
-  },
-  "overrides": [
-    {
-      "plugins": ["jest"],
-      "env": {
-        "jest": true
-      },
-      "files": [
-        "**/__tests__/**/*.[jt]s?(x)",
-        "__mocks__/**/*.js",
-        "**/__mocks__/**/*.js"
-      ],
-      "rules": {
-        "jest/no-disabled-tests": "warn",
-        "jest/no-focused-tests": "error",
-        "jest/no-identical-title": "error",
-        "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
-      }
-    }
-  ]
+  }
 }
