--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "proxyquire": "^1.8.0",
     "shelljs": "^0.6.1",
     "sinon": "^18.0.0",
-    "sinon-chai": "^3.7.0"
+    "sinon-chai": "^3.7.0",
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=16.20.2 <=20"
@@ -47,6 +48,7 @@
     "test": "node ./node_modules/mocha/bin/_mocha './{,!(node_modules)/**/}*.spec.js' --exit",
     "test:ci": "yarn test",
     "start": "node lib/index.js",
-    "version": "exit 0"
+    "version": "exit 0",
+    "build": "rm -rf dist && tsc -p tsconfig.json"
   }
 }
