--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
       "impliedStrict": true
     }
   },
-  
+
   "plugins": [
     "chai-friendly",
     "import",
@@ -89,5 +89,41 @@
     "node/no-deprecated-api": "warn",
     "no-useless-constructor": "warn",
     "no-return-await": "off"
-  }
+  },
+
+  "overrides": [
+    {
+      "files": ["**/*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "plugins": ["@typescript-eslint/eslint-plugin"],
+      "extends": ["plugin:@typescript-eslint/recommended"],
+      "parserOptions": {
+        "project": "tsconfig.json",
+        "sourceType": "module"
+      },
+      "env": {
+        "node": true
+      },
+      "rules": {
+        "no-restricted-syntax": "warn",
+        "import/prefer-default-export": "off",
+        "node/no-unsupported-features": "off",
+        "node/no-unsupported-features/es-builtins": "error",
+        "node/no-unsupported-features/es-syntax": ["error", {
+          "ignores": ["modules"]
+        }],
+        "node/no-unsupported-features/node-builtins": "error",
+        "no-empty-function":  "warn",
+        "lines-between-class-members": "off",
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-var-requires": "warn",
+        "@typescript-eslint/no-unused-vars": ["error", {
+          "argsIgnorePattern": "^_",
+          "varsIgnorePattern": "^_",
+          "caughtErrorsIgnorePattern": "^_"
+        }
+        ]
+      }
+    }
+  ]
 }
