--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "chai": "^4.4.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
