--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "lint-fix": "eslint '*/**/*.js' --fix",
     "test": "node ./node_modules/mocha/bin/_mocha './{,!(node_modules)/**/}*.spec.js' --exit",
     "test:ci": "yarn test",
-    "start": "node lib/index.js",
+    "start": "node dist/index.js",
     "version": "exit 0",
     "build": "rm -rf dist && tsc -p tsconfig.json"
   }
