--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "chai": "^4.4.1",
@@ -39,6 +40,7 @@
     "shelljs": "^0.6.1",
     "sinon": "^18.0.0",
     "sinon-chai": "^3.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "engines": {
