--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "lint": "eslint '*/**/*.{j,t}s'",
     "lint-fix": "eslint '*/**/*.{j,t}s' --fix",
-    "test": "node ./node_modules/mocha/bin/_mocha --require ts-node/register 'test/**/*.spec.js' --exit",
+    "test": "node ./node_modules/mocha/bin/_mocha --require ts-node/register './{,!(node_modules|dist)/**/}*.spec.js' --exit",
     "test:ci": "yarn test",
     "start": "node dist/index.js",
     "version": "exit 0",
