--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typescript": "^5.7.2"
   },
   "engines": {
-    "node": ">=16.20.2 <=20"
+    "node": "^22.14.0"
   },
   "scripts": {
     "lint": "eslint '*/**/*.{j,t}s'",
