--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "**/request/form-data": "2.5.5"
   },
   "dependencies": {
+    "@codefresh-io/cf-telemetry": "^3.1.0",
     "@codefresh-io/task-logger": "^1.12.3",
     "cf-errors": "^0.1.17",
     "cf-logs": "^1.1.28",
